fixed CSS spacing

--- a/src/Messages/Messages.css
+++ b/src/Messages/Messages.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: 1rem 2rem 1rem 1rem;
     width: 100%;
-    list-style:none;
+    list-style: none;
     margin: 4rem 0 3.5rem 0;
 }
 
@@ -24,7 +24,7 @@
     color: gray;
     font-size: 12px;
     padding-bottom: 4px;
-    display:  flex;
+    display: flex;
     align-items: baseline;
 }
 
@@ -35,7 +35,7 @@
 .bot-image {
     border-radius: 50%;
     width: 22px;
-    height:  22px;
+    height: 22px;
     border: 1px solid #62e2c0;
     margin-right: 1rem;
     margin-top: 20px;
@@ -55,15 +55,12 @@
 .message--user .message__username {
     flex-direction: row-reverse;
     color: #a5acff;
+    text-align: right;
 }
 
 .message--bot .message__username {
     text-align: left;
     color: #62e2c0;
-}
-
-.message--user .message__username {
-    text-align: right;
 }
 
 .message__text {
@@ -84,7 +81,7 @@
     height: 0;
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
-    border-right:6px solid #ddfde8;
+    border-right: 6px solid #ddfde8;
     position: absolute;
     left: -6px;
     top: calc(50% - 6px);
